@@ -407,8 +407,6 @@ LIBRPM_0
     tarHeaderRead;
     tarHeaderWrite;
     tarTrailerWrite;
-    XrpmgiLink;
-    XrpmgiUnlink;
     XrpmpsLink;
     XrpmpsmLink;
     XrpmpsmUnlink;
